# AI-Data-Analaysis-31Aug

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  AUTOMATION_PROMPT.md  BRANCH_UPDATE_SUMMARY.md  CLAUDE.md  COMPLETE_INTEGRATION_SUMMARY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  ENTERPRISE_PLATFORM_SUMMARY.md  ERROR_PATTERNS.yaml  FINAL_PROJECT_SUMMARY.md  FINAL_TEST_REPORT.md  FIXES_COMPLETE.md  GAPS_AND_ISSUES.md  HITL_DEVELOPMENT_PLAN.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_DOCUMENTATION.md  LLM_INTEGRATION.md  MARIMO_INTEGRATION_COMPLETE.md  METRICS_DASHBOARD.md  Makefile  NEXT_STEPS_ACTION_PLAN.md  NO_AUTH_DEPLOYMENT.md  PHASE1_README.md  PHASE2_COMPLETE.md  PHASE4_COMPLETE.md  PLATFORM_COMPLETE.md  PROJECT_STATE.yaml  PROMPT_ENGINEERING_GUIDE.md  QUICK_DEPLOYMENT_GUIDE.md  README.md  README_STREAMLIT.md  REALITY_CHECK_AND_IMPROVEMENTS.md  REALITY_CHECK_REPORT.md  RECURSIVE_ENGINE.md  RECURSIVE_SYSTEM_SUMMARY.md  (+119 more)
.streamlit/: config.toml  secrets.toml
complete_workflow_screenshots/: workflow_results.json
config/: agents_config.yaml
docs/: MARIMO_INTEGRATION_PLAN.md  QUICK_START_GUIDE.md
examples/: complete_with_llm.py  phase2_multi_agent.py  quickstart.py
human_loop_platform/: MILESTONE_1_COMPLETION.md  MILESTONE_1_FINAL.md  MILESTONE_2_FINAL_REPORT.md  MILESTONE_2_FIXED_COMPLETE.md  MILESTONE_2_TEST_SUMMARY.md  MILESTONE_3_COMPLETE_STATUS.md  app.py  app_enhanced.py  app_fixed.py  app_v2.py  app_working.py  orchestrator_bridge.py  pytest.ini  requirements.txt  test_debug_nav_browser.py  (+5 more)
(+109 files in other folders)
